# libdc_posix_xsi

./: CMakeLists.txt
include/dc_posix_xsi/: dc_dirent.h  dc_fmtmsg.h  dc_ftw.h  dc_grp.h  dc_libgen.h  dc_math.h  dc_ndbm.h  dc_pwd.h  dc_search.h  dc_signal.h  dc_stdlib.h  dc_string.h  dc_strings.h  dc_syslog.h  dc_time.h  dc_unistd.h  dc_utmpx.h  dc_wchar.h
include/dc_posix_xsi/sys/: dc_ipc.h  dc_mman.h  dc_msg.h  dc_resource.h  dc_sem.h  dc_shm.h  dc_stat.h  dc_time.h  dc_uio.h
src/: dirent.c  fmtmsg.c  ftw.c  grp.c  libgen.c  math.c  ndbm.c  pwd.c  search.c  signal.c  stdlib.c  string.c  strings.c  syslog.c  time.c  unistd.c  utmpx.c  wchar.c
src/sys/: ipc.c  mman.c  msg.c  resource.c  sem.c  shm.c  stat.c  time.c  uio.c
tests/: CMakeLists.txt
